Correções e refatorações classes